--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -14,6 +14,8 @@
 .header__link {
     font-family: "Island Moments", cursive;
     font-size: 48px;
+    color: #000;
+    text-decoration: none;
 }
 
 
