--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -87,6 +87,7 @@
   display: block;
   padding: 8px;
   color: rgb(0, 0, 0);
+  font-family: "Comfortaa", sans-serif;
   font-size: 18px;
   text-align: center;
   text-decoration: none;
